# docs/apispec.yml
@@ -16,6 +16,29 @@ tags:
   - name: transactions
     description: Managements of transactions
 paths:
+  /rate:
+    post:
+      summary: Reserves exchange rate for a period of time
+      security:
+        - Bearer: []
+      tags:
+        - exchange
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RateResponse'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        500:
+          $ref: '#/components/responses/Internal'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RateInput'
   /sessions:
     post:
       summary: Login by user and password
@@ -712,6 +735,46 @@ components:
           description: IMEI. Requied for mobile only.
           type: string
           example: 1237987834798375349
+    RateResponse:
+      type: object
+      description: >
+        Current exchange rate.
+      properties:
+        id:
+          $ref: '#/components/schemas/Uuid'
+        from:
+          $ref: '#/components/schemas/Currency'
+        to:
+          $ref: '#/components/schemas/Currency'
+        amount:
+          $ref: '#/components/schemas/Value'
+        rate:
+          $ref: '#/components/schemas/Rate'
+        expiration:
+          $ref: '#/components/schemas/TimeStamp'
+        createdAt:
+          $ref: '#/components/schemas/TimeStamp'
+        updatedAt:
+          $ref: '#/components/schemas/TimeStamp'
+    RateInput:
+      type: object
+      required:
+        - id
+        - from
+        - to
+        - amount
+        - amountCurrency
+      properties:
+        id:
+          $ref: '#/components/schemas/Uuid'
+        from:
+          $ref: '#/components/schemas/Currency'
+        to:
+          $ref: '#/components/schemas/Currency'
+        amountCurrency:
+          $ref: '#/components/schemas/Currency'
+        amount:
+          $ref: '#/components/schemas/Value'
     Value:
       type: string
       description: Monetary value - either fiat or blockchain
@@ -873,6 +936,14 @@ components:
     Id:
       type: string
       example: jghkdfgdjfgkdf7gd
+    Uuid:
+      type: string
+      description: Uuid v4
+      example: '5188dde0-9dc3-461f-b272-dd3b1398c1dc'
+    Rate:
+      type: number
+      description: exchange rate
+      example: 0.0025
     TimeStamp:
       type: number
       description: unix timestamp
